better func name

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         e.preventDefault()
         const file = e.dataTransfer.files[0]
         srcFile = file.path
-        myFunc(srcFile)
+        startVid(srcFile)
       };
     </script>
     <script type="text/javascript" src="video.js"></script>
